some trivial changes

--- a/_posts/2020-10-18-并行三角矩阵求解（PDTSV）.md
+++ b/_posts/2020-10-18-并行三角矩阵求解（PDTSV）.md
@@ -11,18 +11,23 @@ title: 并行三角矩阵求解（PDTRSV）
 ​		首先，我查阅了经典的*Matrix Computations*著作中，有关三角矩阵的blocked substitution算法。所谓blocked算法，就是指将矩阵划分为许多blocks，然后将矩阵整体的算法表示为blocks之间的计算。*Matrix Computations*中有关下三角矩阵L求解的blocked算法如下：
 
 ​		我们想要求出向量$X$满足$LX=B$，其中$L$为已知下三角矩阵（Lower Triangular Matrix），$B$为已知的右手参数向量（Right-hand Side）。将矩阵和向量划分为blocks的形式：
+\
 $$
 \left[\begin{matrix} L_{11} & 0\\L_{21} & L_{22} \end{matrix}\right] \left[\begin{matrix} X_1 \\ X_2 \end{matrix}\right] = \left[\begin{matrix} B_1 \\ B_2 \end{matrix}\right]
 $$
+\
 ​		其中$L_{11}$和$L_{22}$为小一点的下三角矩阵。首先可以求解$L_{11}X_1=B_1$得到$X_1$。上式的左边可以展开得到：
+\
 $$
 \left[\begin{matrix}L_{11}X_1\\L_{21}X_1 + L_{22}X_2\end{matrix}\right] =\left[\begin{matrix} B_1 \\ B_2 \end{matrix}\right]
 $$
+\
 ​		所以只需要将$B_2$减去$L_{21}X_1$就能够去掉$L_{11}$所占的行的列，从而将问题归为更小的$L_{22}X_2=\widetilde{B_2}$。其中，
+\
 $$
 \widetilde{B_2} = B_2 - L_{21}X_2
 $$
-
+\
 ### 三角矩阵的Blocks解法过程
 
 ​		有了上面的理论基础，下面我们来设计一种求解blocked三角矩阵的直观算法。
@@ -31,11 +36,11 @@ $$
 
 ​		**对角求解**。首先求解第一行中唯一的一块非零block $L_{11}X_1=B_1$，得到$X_1$的值。
 
-![p1](C:\Users\15876\Desktop\blogs\my_blog\schuangs.github.io\assets\image\blog1\p1.png)
+![p1](..\assets\image\blog1\p1.png)
 
 ​		**更新B**。然后，将$X_1$的结果传给$L_{11}$同一列的$L_{21}$、$L_{31}$、...、$L_{N1}$，计算$B_i -= L_{i1}X_1$。
 
-![p2](C:\Users\15876\Desktop\blogs\my_blog\schuangs.github.io\assets\image\blog1\p2.png)
+![p2](..\assets\image\blog1\p2.png)
 
 ​		**迭代**。然后就可以把$L_{11}$所在的行和列全部丢掉。迭代求解更小的问题。
 
